Changes done to fix Join community under Community tab and Alumanae Directory Name under Alignment under director

--- a/src/components/BGCDirectory/DirectoryHome.css
+++ b/src/components/BGCDirectory/DirectoryHome.css
@@ -17,6 +17,7 @@
     font-weight: 500;
     letter-spacing: 0.15px;
     line-height: 24px;
+    padding-left: 20px;
 }
 .directory__header {
     display: flex;
